Fixed the background issue, now the gradient stretches all the way down

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
+html{
+	min-height: 100%;
+	max-height: 100000px;
+}
+
 body{
     margin:0;
     padding:0;
     width: 100%;
-    min-height: 800px;
+    height: auto;
 
 	background: #91152f; /*fallback*/
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#91152f), color-stop(100%,#3a0e1d)); /* Chrome,Safari4+ */
